--- a/src/solonoble.tex
+++ b/src/solonoble.tex
@@ -21,30 +21,30 @@
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Obacht: These must not be changed, otherwise the game is not playable
-\def\fieldWidth{9}
-\def\fieldHeight{9}
+\def\boardWidth{9}
+\def\boardHeight{9}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Javascript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{insDLJS}[]{JSDateiname}{solo-noble}
 
-const GAME_DESC = "This game consists of a field of cells. On each of these but one a marble\
+const GAME_DESC = "This game consists of a board of cells. On each of these but one a marble\
 is placed. The goal is to reduce the marble count to one while placing this last marble\
 on the one cell which is empty at the beginning of the game.\
 A marble can be moved only by jumping over exactly one other marble onto an empty cell.\
 The jumped over marble is removed and it is not allowed to jump diagonal.";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+const BOARD_WIDTH = AFMakeNumber(\boardWidth);
+const BOARD_HEIGHT = AFMakeNumber(\boardHeight);
 const SCREEN_TEXT_SIZE = 300;
 
 % Constants
 const ANIMATION_SPEED = 33;
 const ANIMATION_OFFSET = 0.05;
 % Index of the animation cell x and y
-const ANIM_POS = FIELD_WIDTH - 1;
+const ANIM_POS = BOARD_WIDTH - 1;
 % Index of the cell that counts as a win
 const W_POS_X = [4, 4, 4, 4, 4];
 const W_POS_Y = [4, 2, 4, 4, 4];
@@ -57,24 +57,24 @@ const FULL = 1;
 % Animation interval variable for jumping
 var run;
 var timestep = 0.0;
-% The game field
-var complField = new Array();
+% The game board
+var complBoard = new Array();
 % Saves the last clicked cell
 var currentCell = null;
 % The amount of taken cells
 var currentMarbleCount = 0;
-% The index determining which field should be played
-var fieldIdx = 0;
+% The index determining which board should be played
+var boardIdx = 0;
 var colorEnabled = true;
 % Animation variable for solution
 var runSol;
 % Saving current solving step
 var exeIndex = 0;
-% The array of moves to execute/apply to the field
+% The array of moves to execute/apply to the board
 var exeMoves = [];
 
-%%%%%%%%%% Field arrays %%%%%%%%%%
-const FIELDS = [
+%%%%%%%%%% Board arrays %%%%%%%%%%
+const BOARDS = [
     [ % English
         [NONE, NONE,  NONE,  NONE,  NONE,  NONE,  NONE,  NONE, NONE],
         [NONE, NONE,  NONE,  FULL,  FULL,  FULL,  NONE,  NONE, NONE],
@@ -203,8 +203,8 @@ const HIGHLIGHT_COLOR = [ "RGB", 0.984, 0.800, 0.176 ];
 % Helper %
 %%%%%%%%%%
 /**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
+ * Returns a random number between 0 and the parameter.
+ * @param {Number} max The upper bound
  */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
@@ -251,8 +251,8 @@ function hslToRgb(h, s, l) {
 /**
  * Generates the specified amount of colors and pushes
  * them to the colors array.
- * For generating the colors are selected using hsl
- * and afterwards transformed to rgb.
+ * For generating the colors are selected using HSL
+ * and afterwards transformed to RGB.
  *
  * @param {number} amount The amount of colors to generate
  * @param {number} saturation The saturation
@@ -268,35 +268,35 @@ function generateColors(saturation, lightness, amount) {
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Initialisation and Restart %
+% Initialization and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 /**
- * Initialise the default game state.
+ * Initialize the default game state.
  */
 function initialise() {
     % Init the GUI
     initialiseButtons();
     % Get the value of the choise menu
-    fieldIdx = this.getField("cmLayout").currentValueIndices;
-    currentMarbleCount = MARBLE_COUNTS[fieldIdx];
+    boardIdx = this.getField("cmLayout").currentValueIndices;
+    currentMarbleCount = MARBLE_COUNTS[boardIdx];
 
-    % Create the field using the FIELDS array data
+    % Create the board using the BOARDS array data
     var idx = 0;
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
+    for (var row = 0; row < BOARD_HEIGHT; row++) {
         var tmp = new Array();
-        for (var column = 0; column < FIELD_WIDTH; column++) {
+        for (var column = 0; column < BOARD_WIDTH; column++) {
             var colorIdx = -1;
-            var cell = FIELDS[fieldIdx][row][column];
+            var cell = BOARDS[boardIdx][row][column];
             if (cell == FULL) {
                 colorIdx = idx;
                 idx++;
             }
             tmp.push([cell, colorIdx]);
         }
-        complField.push(tmp);
+        complBoard.push(tmp);
     }
 
-    % Hide all cells that are not part of the field
+    % Hide all cells that are not part of the board
     hideCells();
     % Generate a color for each marble
     generateColors(1.0, 0.5, currentMarbleCount);
@@ -305,7 +305,7 @@ function initialise() {
 }
 
 /**
- * Initialise all buttons from the GUI.
+ * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct colors.
  */
 function initialiseButtons() {
@@ -319,22 +319,22 @@ function initialiseButtons() {
 
     this.getField("showSol").setAction("MouseUp", "showSolution();");
 
-    this.getField("import").setAction("MouseUp", "importField();");
-    this.getField("export").setAction("MouseUp", "exportField();");
+    this.getField("import").setAction("MouseUp", "importBoard();");
+    this.getField("export").setAction("MouseUp", "exportBoard();");
 
     this.getField("exmoves").setAction("MouseUp", "executeMoves();");
 
     this.getField("cmLayout").currentValueIndices = 0;
 
-    % Each field needs to be connected to an input function
-    var field;
-    var funcName = "fieldClicked";
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
+    % Each cell needs to be connected to an input function
+    var cell;
+    var funcName = "cellClicked";
+    for (var x = 0; x < BOARD_WIDTH; x++) {
+        for (var y = 0; y < BOARD_HEIGHT; y++) {
             var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            field = this.getField("pos" + x + "-" + y);
-            field.setAction("MouseDown", callbackName);
-            field.textSize = SCREEN_TEXT_SIZE / Math.max(FIELD_HEIGHT, FIELD_WIDTH);
+            cell = this.getField("pos" + x + "-" + y);
+            cell.setAction("MouseDown", callbackName);
+            cell.textSize = SCREEN_TEXT_SIZE / Math.max(BOARD_HEIGHT, BOARD_WIDTH);
         }
     }
 
@@ -362,30 +362,30 @@ function restart() {
 
     currentCell = null;
 
-    fieldIdx = this.getField("cmLayout").currentValueIndices;
-    currentMarbleCount = MARBLE_COUNTS[fieldIdx];
+    boardIdx = this.getField("cmLayout").currentValueIndices;
+    currentMarbleCount = MARBLE_COUNTS[boardIdx];
 
-    % Create the field choosing a random symbol for each field
+    % Reset the board
     var colorIdx = 0;
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
-        for (var column = 0; column < FIELD_WIDTH; column++) {
-            var cell = FIELDS[fieldIdx][row][column];
-            complField[row][column][0] = cell;
+    for (var row = 0; row < BOARD_HEIGHT; row++) {
+        for (var column = 0; column < BOARD_WIDTH; column++) {
+            var cell = BOARDS[boardIdx][row][column];
+            complBoard[row][column][0] = cell;
             if (cell == FULL) {
-                complField[row][column][1] = colorIdx;
+                complBoard[row][column][1] = colorIdx;
                 colorIdx++;
             }
         }
     }
 
     % Disable left over highlights
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
-        for (var column = 0; column < FIELD_WIDTH; column++) {
+    for (var row = 0; row < BOARD_HEIGHT; row++) {
+        for (var column = 0; column < BOARD_WIDTH; column++) {
             highlight(column, row, false);
         }
     }
 
-    % Hide all cells that are not part of the field
+    % Hide all cells that are not part of the board
     hideCells();
 
     colorEnabled = this.getField("cbColor").isBoxChecked(0);
@@ -434,13 +434,13 @@ function tooltip(on) {
 % Gamelogic %
 %%%%%%%%%%%%%
 /**
- * Save and highlight the last field the user clicked on.
- * Selection is only removed after clicking on the same field.
+ * Save and highlight the last cell the user clicked on.
+ * Selection is only removed after clicking on the same cell.
  *
  * @param {Number} x The x position.
  * @param {Number} y The y position.
  */
-function fieldClicked(x, y, ignore=false) {
+function cellClicked(x, y, ignore=false) {
     this.getField("exporttxt").setFocus();
 
     if (timestep != 0.0) {
@@ -450,7 +450,7 @@ function fieldClicked(x, y, ignore=false) {
 
     % Select cell if none selected
     if (currentCell === null) {
-        if (complField[y][x][0] == FULL) {
+        if (complBoard[y][x][0] == FULL) {
             currentCell = [x, y];
             highlight(x, y, true);
         } else {
@@ -469,11 +469,11 @@ function fieldClicked(x, y, ignore=false) {
         var absY = Math.abs(diffY);
 
         if (absX == 2 && absY == 0 || absX == 0 && absY == 2) {
-            if (complField[y][x][0] == EMPTY) {
+            if (complBoard[y][x][0] == EMPTY) {
                 var x2 = x + diffX / 2;
                 var y2 = y + diffY / 2;
                 % Actually do stuff
-                if (complField[y2][x2][0] == FULL) {
+                if (complBoard[y2][x2][0] == FULL) {
                     highlight(currentCell[0], currentCell[1], false);
                     jump(x, y);
                     currentCell = null;
@@ -491,7 +491,7 @@ function fieldClicked(x, y, ignore=false) {
 
 /**
  * Place the currentCell content into the new cell
- * and remove the cell content inbetween.
+ * and remove the cell content in between.
  *
  * @param {Number} x1 The x position.
  * @param {Number} y1 The y position.
@@ -508,17 +508,17 @@ function jump(x1, y1) {
     var x3 = x1 + diffX / 2;
     var y3 = y1 + diffY / 2;
 
-    complField[y3][x3][0] = EMPTY;
-    complField[y2][x2][0] = EMPTY;
-    complField[y1][x1][0] = FULL;
+    complBoard[y3][x3][0] = EMPTY;
+    complBoard[y2][x2][0] = EMPTY;
+    complBoard[y1][x1][0] = FULL;
     % Rewrite color information
-    complField[y1][x1][1] = complField[y2][x2][1];
-    complField[y3][x3][1] = -1;
-    complField[y2][x2][1] = -1;
+    complBoard[y1][x1][1] = complBoard[y2][x2][1];
+    complBoard[y3][x3][1] = -1;
+    complBoard[y2][x2][1] = -1;
 
     % Prepare the animation cell
-    complField[ANIM_POS][ANIM_POS][0] = FULL;
-    complField[ANIM_POS][ANIM_POS][1] = complField[y1][x1][1];
+    complBoard[ANIM_POS][ANIM_POS][0] = FULL;
+    complBoard[ANIM_POS][ANIM_POS][1] = complBoard[y1][x1][1];
     draw(ANIM_POS, ANIM_POS);
 
     % Start animation
@@ -529,7 +529,7 @@ function jump(x1, y1) {
 /**
  * Function for an animated cell. The cell is moved between two
  * given positions by linear interpolation.
- * The startposition and the center position are redrawn at
+ * The start position and the center position are redrawn at
  * appropriate times.
  *
  * @param {Number} x1 The target x position.
@@ -541,18 +541,18 @@ function jump(x1, y1) {
  */
 function jumpAnimation(x1, y1, x2, y2, x3, y3) {
     % Get animation cell
-    var field = this.getField("pos" + ANIM_POS + "-" + ANIM_POS);
+    var cell = this.getField("pos" + ANIM_POS + "-" + ANIM_POS);
 
-    % Stop animation and reset if timelimit is reached
+    % Stop animation and reset if time limit is reached
     if (timestep >= 1.0) {
         timestep = 0.0;
         draw(x1, y1);
-        field.hidden = true;
-        complField[ANIM_POS][ANIM_POS][0] = NONE;
+        cell.hidden = true;
+        complBoard[ANIM_POS][ANIM_POS][0] = NONE;
         if (getAllMoves().length > 0) {
             printInfoText("Jump successfull!");
         } else {
-            var lastPos = complField[W_POS_Y[fieldIdx]][W_POS_X[fieldIdx]][0] == FULL;
+            var lastPos = complBoard[W_POS_Y[boardIdx]][W_POS_X[boardIdx]][0] == FULL;
             if (currentMarbleCount == 1 && lastPos) {
                 printInfoText("Game over, you won!");
             } else {
@@ -571,7 +571,7 @@ function jumpAnimation(x1, y1, x2, y2, x3, y3) {
     }
 
     % Show the animation cell
-    field.hidden = false;
+    cell.hidden = false;
 
     % Get the cells for the rectangle
     var src = this.getField("pos" + x2 + "-" + y2);
@@ -581,7 +581,7 @@ function jumpAnimation(x1, y1, x2, y2, x3, y3) {
     for (var i = 0; i < 4; i++) {
         rect[i] = tgt.rect[i] * timestep + src.rect[i] * (1.0 - timestep);
     }
-    field.rect = rect;
+    cell.rect = rect;
 
     timestep += ANIMATION_OFFSET;
 }
@@ -590,13 +590,13 @@ function jumpAnimation(x1, y1, x2, y2, x3, y3) {
 % Show Solution %
 %%%%%%%%%%%%%%%%%
 /**
- * Show a predefined solution for the start field.
+ * Show a predefined solution for the start board.
  * Checking all possible moves like here
  * https://ece.uwaterloo.ca/~dwharder/aads/Algorithms/Backtracking/Peg_solitaire/
  * does not work for performance reasons.
  */
 function showSolution() {
-    % Prevent double execution due to multiple clicks on the gui
+    % Prevent double execution due to multiple clicks on the GUI
     if (exeIndex != 0) {
         printInfoText("Solution already running!");
         return;
@@ -604,8 +604,8 @@ function showSolution() {
     % Restart to ensure all marbles being there
     restart();
 
-    var fieldIdx = this.getField("cmLayout").currentValueIndices;
-    exeMoves = solMoves[fieldIdx];
+    var boardIdx = this.getField("cmLayout").currentValueIndices;
+    exeMoves = solMoves[boardIdx];
     % Start animation
     var callback = "animateMoves()";
     runSol = app.setInterval(callback, ANIMATION_SPEED * (1.1 / ANIMATION_OFFSET));
@@ -614,15 +614,15 @@ function showSolution() {
 }
 
 /**
- * Apply a specified sequence of moves to the field.
+ * Apply a specified sequence of moves to the board.
  * The moves need to be given via the GUI and need to be
  * in character-notation or matrix-notation (m1:n1-m2:n2).
  * It is possible to give any number of moves.
  */
 function executeMoves() {
-    % Reset focus since the button would yield the txt window inoperative
+    % Reset focus since the button would yield the text window inoperative
     this.getField("exmovestxt").setFocus();
-    % Prevent double execution due to multiple clicks on the gui
+    % Prevent double execution due to multiple clicks on the GUI
     if (exeIndex != 0) {
         printInfoText("Moves are already executed!");
         return;
@@ -646,7 +646,7 @@ function executeMoves() {
 /**
  * Animates the current move (exeIndex) from the exeMoves array.
  * The same function is called as if the cells are would be clicked on.
- * Clears the intervall after applying all steps.
+ * Clears the interval after applying all steps.
  */
 function animateMoves() {
     % Security measure to ensure no execution while move animation is running
@@ -660,8 +660,8 @@ function animateMoves() {
         return;
     }
     % Execute move by simulate a click on the cells
-    fieldClicked(exeMoves[exeIndex][0], exeMoves[exeIndex][1]);
-    fieldClicked(exeMoves[exeIndex][2], exeMoves[exeIndex][3]);
+    cellClicked(exeMoves[exeIndex][0], exeMoves[exeIndex][1]);
+    cellClicked(exeMoves[exeIndex][2], exeMoves[exeIndex][3]);
     % Reset the cell state if the move was not executable
     currentCell = null;
     highlight(exeMoves[exeIndex][0], exeMoves[exeIndex][1], false);
@@ -671,8 +671,8 @@ function animateMoves() {
 
 /**
  * Converts a given string into a sequence of array positions.
- * The string needs to refere to the cells via character notation.
- * Obacht: Does only work for english and european layout!
+ * The string needs to refer to the cells via character notation.
+ * Obacht: Does only work for English and European layout!
  * @param {String} moveSequence The sequence of moves to convert.
  * @return {Array} An array of fromTo positions or [[0]] if not parseable.
  */
@@ -755,9 +755,9 @@ function stringToSolution(moveSequence) {
 function getAllMoves() {
     % Get movesToTry for all marbles
     var movesToTry = [];
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (complField[y][x][0] == FULL) {
+    for (var x = 0; x < BOARD_WIDTH; x++) {
+        for (var y = 0; y < BOARD_HEIGHT; y++) {
+            if (complBoard[y][x][0] == FULL) {
                 movesToTry = movesToTry.concat(getMoves([x, y]));
             }
         }
@@ -778,16 +778,16 @@ function getMoves(marble) {
     var moves = [];
 
     % Check each of the four directions + out of bounds
-    if (x + 2 < FIELD_WIDTH && complField[y][x + 2][0] == EMPTY && complField[y][x + 1][0] == FULL) {
+    if (x + 2 < BOARD_WIDTH && complBoard[y][x + 2][0] == EMPTY && complBoard[y][x + 1][0] == FULL) {
         moves.push([x, y, x + 2, y]);
     }
-    if (x - 2 >= 0 && complField[y][x - 2][0] == EMPTY && complField[y][x - 1][0] == FULL) {
+    if (x - 2 >= 0 && complBoard[y][x - 2][0] == EMPTY && complBoard[y][x - 1][0] == FULL) {
         moves.push([x, y, x - 2, y]);
     }
-    if (y + 2 < FIELD_HEIGHT && complField[y + 2][x][0] == EMPTY && complField[y + 1][x][0] == FULL) {
+    if (y + 2 < BOARD_HEIGHT && complBoard[y + 2][x][0] == EMPTY && complBoard[y + 1][x][0] == FULL) {
         moves.push([x, y, x, y + 2]);
     }
-    if (y - 2 >= 0 && complField[y - 2][x][0] == EMPTY && complField[y - 1][x][0] == FULL) {
+    if (y - 2 >= 0 && complBoard[y - 2][x][0] == EMPTY && complBoard[y - 1][x][0] == FULL) {
         moves.push([x, y, x, y - 2]);
     }
     return moves;
@@ -797,10 +797,10 @@ function getMoves(marble) {
 % Import and export %
 %%%%%%%%%%%%%%%%%%%%%
 /**
- * Print a unique number to the gui as field representation.
+ * Print a unique number to the GUI as board representation.
  */
-function exportField() {
-    % Reset focus since the button would yield the txt window inoperative
+function exportBoard() {
+    % Reset focus since the button would yield the text window inoperative
     this.getField("exporttxt").setFocus();
     if (timestep != 0.0) {
         printInfoText("Can not export while jumping!");
@@ -811,20 +811,20 @@ function exportField() {
 }
 
 /**
- * Get a number as unique field representation.
- * Each bit representing one cell of the field.
- * @return {Number} A representor for the field.
+ * Get a number as unique board representation.
+ * Each bit representing one cell of the board.
+ * @return {Number} A representative of the board.
  */
 function getUniqueCombination() {
     var arrayNum = 0;
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (complField[y][x][0] == NONE) {
+    for (var x = 0; x < BOARD_WIDTH; x++) {
+        for (var y = 0; y < BOARD_HEIGHT; y++) {
+            if (complBoard[y][x][0] == NONE) {
                 continue;
             }
             % Shift operation do not work - to many bits needed
             arrayNum *= 2;
-            if (complField[y][x][0] == FULL) {
+            if (complBoard[y][x][0] == FULL) {
                 arrayNum += 1;
             }
         }
@@ -833,11 +833,11 @@ function getUniqueCombination() {
 }
 
 /**
- * Read the input from the gui to generate a field from a
+ * Read the input from the GUI to generate a board from a
  * number representation.
  * OBACHT: Different layouts are not compatible.
  */
-function importField() {
+function importBoard() {
     % Stop showing solution if in process
     if (exeIndex != 0) {
         app.clearInterval(runSol);
@@ -846,36 +846,36 @@ function importField() {
 
     % Reset focus since the button would yield the txt window inoperative
     this.getField("importtxt").setFocus();
-    var fieldIdx = this.getField("cmLayout").currentValueIndices;
+    var boardIdx = this.getField("cmLayout").currentValueIndices;
     var combination = this.getField("importtxt").value;
-    if (MARBLE_COUNTS[fieldIdx] < cellCount(combination)) {
+    if (MARBLE_COUNTS[boardIdx] < cellCount(combination)) {
         printInfoText("Input not compatible with current selected layout.");
         return;
     }
-    toField(combination);
+    toBoard(combination);
     drawAll();
     printInfoText("Imported!");
 }
 
 /**
- * Uses the given field to set the cells of the displayed field.
- * @param {Number} combination A representation of the field.
+ * Uses the given board to set the cells of the displayed board.
+ * @param {Number} combination A representation of the board.
  */
-function toField(combination) {
+function toBoard(combination) {
     var res = combination;
     % Iterate from back to front because of leading zeros
-    for (var x = FIELD_WIDTH - 1; x >= 0; x--) {
-        for (var y = FIELD_HEIGHT - 1; y >= 0 ; y--) {
-            if (complField[y][x][0] == NONE) {
+    for (var x = BOARD_WIDTH - 1; x >= 0; x--) {
+        for (var y = BOARD_HEIGHT - 1; y >= 0 ; y--) {
+            if (complBoard[y][x][0] == NONE) {
                 continue;
             }
 
             var val = res \% 2;
             if (val == 1) {
-                complField[y][x][0] = FULL;
+                complBoard[y][x][0] = FULL;
                 res -= 1;
             } else {
-                complField[y][x][0] = EMPTY;
+                complBoard[y][x][0] = EMPTY;
             }
             res = res / 2;
         }
@@ -883,9 +883,9 @@ function toField(combination) {
 }
 
 /**
- * Get the amount of used cells that are in this field.
+ * Get the amount of used cells that are in this board.
  * For this the amount of ones of the binary form are counted.
- * @param {Number} combination A number represenation of the field.
+ * @param {Number} combination A number representation of the board.
  * @return {Number} The amount of used cells.
  */
 function cellCount(combination) {
@@ -909,65 +909,65 @@ function cellCount(combination) {
  * Hide all cells that are of type NONE.
  */
 function hideCells() {
-    var field;
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            field = this.getField("pos" + x + "-" + y);
-            if (complField[y][x][0] == NONE) {
-                field.hidden = true;
+    var cell;
+    for (var x = 0; x < BOARD_WIDTH; x++) {
+        for (var y = 0; y < BOARD_HEIGHT; y++) {
+            cell = this.getField("pos" + x + "-" + y);
+            if (complBoard[y][x][0] == NONE) {
+                cell.hidden = true;
             } else {
-                field.hidden = false;
+                cell.hidden = false;
             }
         }
     }
 }
 
 /**
- * Draw all fields.
+ * Draw all cells.
  */
 function drawAll() {
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
+    for (var x = 0; x < BOARD_WIDTH; x++) {
+        for (var y = 0; y < BOARD_HEIGHT; y++) {
             draw(x, y);
         }
     }
 }
 
 /**
- * Since only one field is updated with each input,
- * only this field needs to be redrawn.
+ * Since only one cell is updated with each input,
+ * only this cell needs to be redrawn.
  *
  * @param {Number} x The x position.
  * @param {Number} y The y position.
  */
 function draw(x, y) {
-    var field = this.getField("pos" + x + "-" + y);
-    field.delay = true;
+    var cell = this.getField("pos" + x + "-" + y);
+    cell.delay = true;
 
-    var val = complField[y][x][0];
+    var val = complBoard[y][x][0];
     if (val == FULL) {
-        field.value = MARBLE_SYMBOL;
+        cell.value = MARBLE_SYMBOL;
         if (colorEnabled) {
-            field.textColor = colors[complField[y][x][1]];
+            cell.textColor = colors[complBoard[y][x][1]];
         } else {
-            field.textColor = color.black;
+            cell.textColor = color.black;
         }
     } else {
-        field.value = EMPTY_SYMBOL;
-        field.textColor = color.black;
+        cell.value = EMPTY_SYMBOL;
+        cell.textColor = color.black;
     }
-    field.delay = false;
+    cell.delay = false;
 }
 
 /**
  * Enables or disables the highlight for
- * all cells in the field.
+ * all cells on the board.
  *
  * @param {Boolean} enable Enables or disables highlight.
  */
 function highlightAll(enable) {
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
-        for (var column = 0; column < FIELD_WIDTH; column++) {
+    for (var row = 0; row < BOARD_HEIGHT; row++) {
+        for (var column = 0; column < BOARD_WIDTH; column++) {
             highlight(column, row, enable);
         }
     }
@@ -979,18 +979,17 @@ function highlightAll(enable) {
  * @param {Number} x The x position.
  * @param {Number} y The y position.
  * @param {Boolean} enable If true enables the highlight
- * @param {Boolean} bomb If true enables the bombhighlight
  */
 function highlight(x, y, enable) {
-    var field = this.getField("pos" + x + "-" + y);
-    field.delay = true;
+    var cell = this.getField("pos" + x + "-" + y);
+    cell.delay = true;
     % Highlight the current taken move
     if (enable) {
-        field.borderColor = HIGHLIGHT_COLOR;
+        cell.borderColor = HIGHLIGHT_COLOR;
     } else {
-        field.borderColor = color.transparent;
+        cell.borderColor = color.transparent;
     }
-    field.delay = false;
+    cell.delay = false;
 }
 
 /**
@@ -1041,29 +1040,29 @@ function printInfoText(text) {
         \end{multicols}
 
         % Dynamically adjust the cell width and height to the number of cells
-        % Calculate the max width and height of a block
-        \FPeval{\resultW}{(\fieldWidth * 3 - 2)} % chktex 8
-        \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
+        % Calculate the max width and height of a cell
+        \FPeval{\resultW}{\boardWidth * 3 - 2} % chktex 8
+        \def\cellWidth{\dimexpr (\linewidth-\resultW pt)/\boardWidth \relax}
 
-        \FPeval{\resultH}{(\fieldHeight * 3 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
+        \FPeval{\resultH}{\boardHeight * 3 + 3}
+        \def\cellHeight{\dimexpr (500 pt -\resultH pt)/\boardHeight \relax}
 
         % The game board
         \begin{tcolorbox}
-            % Define the cellsize via the smaller amount
+            % Define the cell size via the smaller amount
             % Must be done here so the \linewidth has the correct value
-            \ifdim\blocksizeW<\blocksizeH
-                \def\blocksize{\blocksizeW}
+            \ifdim\cellWidth<\cellHeight
+                \def\cellsize{\cellWidth}
             \else
-                \def\blocksize{\blocksizeH}
+                \def\cellsize{\cellHeight}
             \fi
 
             \begin{center}
                 \tiny
-                \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
-                    \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
+                \xintFor* #2 in {\xintSeq{0}{\boardHeight-1}} \do {%
+                    \xintFor* #1 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[%
-                            name=pos#1-#2, width=\blocksize, height=\blocksize,%
+                            name=pos#1-#2, width=\cellsize, height=\cellsize,%
                             bordercolor=, backgroundcolor=, align=1, readonly%
                         ]{}%
                         \xintifForLast{}{\hspace{3pt}}%
@@ -1123,11 +1122,11 @@ function printInfoText(text) {
                 \TextField[name=info, width=2\linewidth,
                     bordercolor=, backgroundcolor=, readonly]{\strut}
             \end{tcolorbox}
-            \\[-0.5cm]
+            \\[-0.3cm]
             \PushButton[name=import, bordercolor=, backgroundcolor=, borderwidth=0]{
                 \begin{tcolorbox}
                     \centering
-                    Import field: \strut{}
+                    Import board: \strut{}
                     \TextField[name=importtxt,
                         bordercolor=gray, borderwidth=2pt, backgroundcolor=white]{\strut}
                 \end{tcolorbox}
@@ -1136,7 +1135,7 @@ function printInfoText(text) {
             \PushButton[name=export, bordercolor=, backgroundcolor=, borderwidth=0]{
                 \begin{tcolorbox}
                     \centering
-                    Export field: \strut{}
+                    Export board: \strut{}
                     \TextField[name=exporttxt,
                         bordercolor=gray, borderwidth=2pt, backgroundcolor=white]{\strut}
                 \end{tcolorbox}
